potential fix: info card text overflow
note:

This change nukes the pre-determined height set for every card. Instead, this uses Flex's ability to get the height of the greatest in the row and then sets the children to match.

So, what happens when one card in the row is one sentence in length and the card next to it has five sentences, is it problematic to have such a spacing discrepancy?

Is it better to at least see the text in full, without a hidden overflow, despite having different but similar sized info cards? Or, is it better to truncate text and make these all exactly uniform?

I'm open to ideas and conversation, outlining examples of cases where we might see such. Perhaps even tackling both solutions and doing user testing to see how folks feel.

ref #148 / #12

--- a/css/modules/info-cards.scss
+++ b/css/modules/info-cards.scss
@@ -7,9 +7,7 @@
   * These are not to be confused with HTML P tags.  It is unfortunate
   * that the module happens to call itself with that name.
   */
-$card-width:      320px;
-$card-height-min: 250px;
-$card-height-max: 290px;
+$card-width: 320px;
 
 #asm_animals         > div,
 #interactivemap_maps > div,
@@ -19,10 +17,10 @@ $card-height-max: 290px;
 .parks-categories-block,
 .info-list,
 .paragraph--type--info-list {
-    text-align:center;
-
+    text-align: center;
 }
-@media all and (min-width:$viewport-medium) {
+
+@media all and (min-width: $viewport-medium) {
     #asm_animals         > div,
     #interactivemap_maps > div,
     #legislationTypes    > div,
@@ -32,11 +30,11 @@ $card-height-max: 290px;
     .info-list,
     .promt_programs,
     .paragraph--type--info-list > div {
-        display:flex; flex-direction:row; flex-wrap:wrap;
-        justify-content:space-around;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 }
-
 
 #asm_animals         article,
 #interactivemap_maps article,
@@ -48,41 +46,62 @@ $card-height-max: 290px;
 .info-list         > .info-card,
 .promt_programs > article,
 .paragraph--type--info-card {
-    height:auto;
-    article { height:auto; }
+    height: auto;
+    background-color: $color-table-background;
+    color: $color-text-default;
+    margin-bottom: $size-gutter * 4;
+
+    article { height: auto; }
 
     a {
-        background-color:$color-table-background;
-        color:$color-text-default;
-        display:block; margin-bottom:1em;
-
-        height:$card-height-min; overflow:hidden;
+        background-color: $color-table-background;
+        color: $color-text-default;
+        display: block;
 
         h3 {
-            vertical-align:top; color:$color-footer;
-            font-family:$font-family-default; font-size:$font-size-big;
+            vertical-align: top;
+            color: $color-footer;
+            font-family: $font-family-default;
+            font-size: $font-size-big;
         }
-        &:hover {
-            background-color:$color-selected-background;
-            color:$color-content-background;
 
-            h3 { color:$color-content-background; }
+        &:hover {
+            display: block;
+            background-color: $color-selected-background;
+            color: $color-content-background;
+
+            h3 { color: $color-content-background; }
         }
-        img { width:$card-width - 36px; }
+
+        img { width: $card-width - 36px; }
+
+        @media all and (max-width: $viewport-medium) {
+            padding: $size-gutter;
+        }
     }
 
-    @media all and (min-width:$viewport-medium) {
-        flex-basis:$card-width;
-        vertical-align:top; text-align:center;
+    @media all and (min-width: $viewport-medium) {
+        flex-basis: $card-width;
+        vertical-align: top;
+        text-align: center;
 
         a {
-            padding:$size-gutter * 2; height:$card-height-max;
-            h3 { font-size:$font-size-bigger; margin: 0 0 $size-gutter 0; }
+            display: block;
+            box-sizing: border-box;
+            padding: $size-gutter * 2;
+            height: 100%;
+
+
+            h3 {
+                font-size: $font-size-bigger;
+                margin: 0 0 $size-gutter 0;
+            }
         }
     }
 }
 
 .boards-list header {
-    font-family:$font-family-heading; font-size:$font-size-big;
+    font-family: $font-family-heading;
+    font-size: $font-size-big;
     h3 { display:inline; }
 }
